--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,14 @@
                 <div class="chat-messages" id="chatMessages">
                     <div class="message ai-message">
                         <div class="message-content">
-                            我取有关木芙蓉的详细信息，包括护理、繁殖等更多内容
+                            <p>我可以为您提供关于木芙蓉的详细信息，包括：</p>
+                            <ul>
+                                <li><strong>护理指南</strong> - 浇水、施肥、修剪技巧</li>
+                                <li><strong>繁殖方法</strong> - 扦插、播种等繁殖技术</li>
+                                <li><strong>病虫害防治</strong> - 常见问题及解决方案</li>
+                                <li><strong>季节性护理</strong> - 不同季节的护理要点</li>
+                            </ul>
+                            <p>请随时询问您想了解的内容！</p>
                         </div>
                     </div>
                 </div>
