--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                         <p class="plant-description">与我们的AI聊天了解更多关于这种植物的信息</p>
                     </div>
                     <button class="upload-btn" id="uploadBtn">上传新图片</button>
-                    <input type="file" id="fileInput" accept="image/*" style="display: none;">
+                    <input type="file" id="fileInput" accept="image/*,.heic,.heif" style="display: none;">
                 </div>
             </div>
 
